# fast_api_learning

./: README.md  main.py  requirements.txt
bestseller_udemy/book/: advanced_book.py  books.py
bestseller_udemy/todo/: .gitignore  requirements.txt
cookbook/: .gitignore
cookbook/ch11_middleware/: main.py
cookbook/ch4_saas_app/: api_key.py  db_connection.py  main.py  mfa.py  models.py  operations.py  premium_access.py  rbac.py  security.py  user_session.py
cookbook/ch5_protoapp/: .coverage  locustfile.py  pytest.ini  run_server.py
cookbook/ch6_ticketing_system/: alembic.ini
cookbook/ch8_trip_platform/: profile.html  requirements.txt
data_science_app/ch11_data_science/: 01_compare_operations.py  02_numpy_creating_array.py  (+11 more)
official_docs/: pyproject.toml
official_docs/user_guid/: 01_query_string_validation.py  02_path_number_validation.py  03_query_with_model.py  04_body_multiple_parametes.py  05_body_nested_models.py  06_cookie_parameter.py  07_header_parameter.py  08_cookie_model.py  09_header_model.py  10_extra_model.py  11_response_model_uninon.py  12_form_data.py  13_form_model.py  14_upload_file.py  15_file_and_form.py  16_file_form_model.py  17_json_compatible_encoder.py  18_partial_update_body.py  19_class_as_dependency.py  20_sub_dependency.py  21_dependency_path_operation.py  23_security_first_step.py  24_get_current_user.py  25_simple_oauth2.py  26_jwt_oauth2.py  27_middleware.py  28_cors.py  29_background_task.py  30_background_dependency.py  31_single_model.py  32_multiple_model.py
projects/: projects.db  projects.py  rquirements.txt
(+279 files in other folders)
